Lots of Sonar warning and bad formatting corrected.